added firebase deploy on push

--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
     <link href="https://fonts.googleapis.com/css?family=Lato:400,400i,700,700i,900" rel="stylesheet">
     
     <!--Favicon-->
-    <link rel="shortcut icon" type="images/png" href="media/fav.png"/>
+    <link rel="icon" type="images/jpeg" href="images/favicon.jpeg"/>
+    <link rel="canonical" href="https://athulya.sathesh.in/" />
     <style type="text/css">
       .service-contents .service-item.fir .per:before{content:"47%";width:46.29388816645%}
       .service-contents .service-item.sec .per:before{content:"15%";width:14.564369310793%}
