updated work history

--- a/index.html
+++ b/index.html
@@ -654,14 +654,46 @@
           <div class="event-item">
             <div class="row">
               <div class="col-sm-6">
+                <div class="duration duration-left">2022</div>
+              </div>
+              <div class="col-sm-6">
+                <div class="event event-description-right">
+                  <h4>Diesel</h4>
+                  <p>Diesel is an Indian Tamil language action drama film written and directed by Shanmugam Muthuswamy. It stars Harish Kalyan, Vinay Rai, Athulya Ravi, while Ananya, Sai Kumar, Karunas, Sachin Khedekar, Zakeer Hussain, Dheena, and Vivek Prasanna play supporting roles. It is produced by Third Eye Entertainment.</p>
+                  <h4>Cadaver</h4>
+                  <p>Cadaver is a 2022 Indian Tamil-language police procedural thriller film directed by Anoop Panicker and written by Abhilash Pillai. The film was under Production House Amala Paul Productions. The film stars Amala Paul with Riythvika, Munishkanth, Thrigun, Harish Uthaman and Athulya Ravi in supporting roles. The film's music is composed by Ranjin Raj with cinematography handled by Aravind Singh and editing done by San Lokesh. The film was released in Disney+ Hotstar on 12 August 2022.</p>
+                  <h4>Yenni Thuniga</h4>
+                  <p>Yenni Thuniga is a 2022 Indian Tamil-language action thriller film written and directed by S.K.Vettri Selvan and Produced by Suresh Subramanian. The film was under Production House Rain Of Arrows Entertainment. The film was distributed by Krikes Cine Creations. The film features Jai and Athulya Ravi in the lead roles while Vamsi Krishna was cast in as the main antagonist and Sunil Reddy also appears in a negative role as a politician. The film's music is composed by Sam CS with cinematography handled by J. B. Dinesh Kumar and editing done by V. J. Sabu Joseph. The film was released theatrically on 4 August 2022.</p>
+                  <h4>Vattam</h4>
+                  <p>Vattam is a Tamil action film written and directed by Kamalakannan.[1] The film stars Sibi Sathyaraj, Nikki Galrani, Andrea Jeremiah and Athulya Ravi in the lead roles.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="event-item">
+            <div class="row">
+              <div class="col-sm-6 col-sm-push-6">
+                <div class="duration duration-right">2021</div>
+              </div>
+              <div class="col-sm-6 col-sm-pull-6">
+                <div class="event event-description-left">
+                  <h4>Murungakkai Chips</h4>
+                  <p>Murungakkai Chips (English: Drumstick chips) is a 2021 Indian Tamil-language adult comedy film written and directed by debutant Srijar and produced by Libra Productions and Firstman Film Works. The film stars Shanthanu Bhagyaraj and Athulya Ravi. The film's music and score is composed by Dharan Kumar. The film released in theatres on 10 December 2021.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="event-item">
+            <div class="row">
+              <div class="col-sm-6">
                 <div class="duration duration-left">2020</div>
               </div>
               <div class="col-sm-6">
                 <div class="event event-description-right">
+                  <h4>Yen Peyar Anandhan</h4>
+                  <p>Yen Peyar Anandhan (transl. My Name is Anandhan) is a 2020 Tamil language suspense thriller film directed by Sridhar Venkatesan and starring Santhosh Prathap and Athulya Ravi in the lead roles. It was released on 27 November 2020.</p>
                   <h4>Naadodigal 2</h4>
                   <p>Naadodigal 2 is a 2020 Indian Tamil-language drama film written and directed by Samuthirakani and produced by S Nandagopal under the banner of Madras Enterprises. It stars Sasikumar and Anjali and Subhashini kannan. The film released on 31 January 2020.</p>
-                  <h4>Vattam</h4>
-                  <p>Vattam is an upcoming Indian Tamil action film written and directed by Kamalakannan.[1] The film stars Sibi Sathyaraj, Nikki Galrani, Andrea Jeremiah and Athulya Ravi in the lead roles.</p>
                 </div>
               </div>
             </div>
