removed form in polling section

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
               </div>
               <p class="white">which movie is your favorite in my acting</p>
             </div>
-            <form method="post" action="polls-validate.php">
+            <!-- <form method="post" action="polls-validate.php"> -->
             <div class="col-md-6 col-md-offset-2">
                             <div class="service-item fir">
                 <h3 class="white">Kadhal Kan Kaatudhe</h3>
@@ -228,7 +228,7 @@
               </div>
             </div>
             
-          </form>
+          <!-- </form> -->
           </div>
         </div>
       </div>
